--- a/style/app.scss
+++ b/style/app.scss
@@ -44,3 +44,11 @@ html, body, .app {
 .sign {
   text-align: center;
 }
+
+.animal {
+  width: 125px;
+  height: 125px;
+  background-size: contain;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
