--- a/style/app.scss
+++ b/style/app.scss
@@ -26,7 +26,7 @@ html, body, .app {
   padding: 20px;
   max-width: 800px;
   max-height: 600px;
-  background-color: #a5c442;
+  background-color: #b7cf6b;
   color: #fff;
 }
 
@@ -61,6 +61,12 @@ html, body, .app {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-image: url('../images/barn.png');
+
+  transition: transform 0.2s ease-out;
+
+  &.over {
+    transform: scale(1.1, 1.1);
+  }
 }
 
 .barn-label {
