--- a/style/app.scss
+++ b/style/app.scss
@@ -31,27 +31,6 @@ html, body, .app {
   background-color: #fedfb0;
 }
 
-.horizontal {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-
-  &.center {
-    align-items: center;
-  }
-}
-
-.vertical {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  height: 100%;
-
-  &.center {
-    justify-content: center;
-  }
-}
-
 .screen {
   width: 100%;
   height: 100%;
@@ -83,8 +62,11 @@ html, body, .app {
   align-items: center;
 }
 
+/* sign */
 
 .sign {
+  width: 100%;
+  height: 300px;
   text-align: center;
   padding: 60px;
   background-position: 50% 50%;
@@ -93,18 +75,21 @@ html, body, .app {
   background-image: url('../images/sign.png');
 
   h1 {
-    font-size: 3em;
+
     color: #885533;
     margin: 0;
     line-height: 1em;
   }
 
   h2 {
-    font-size: 2em;
+
     line-height: 0.8em;
     margin: 0;
   }
 }
+
+
+/* animal */
 
 .animal {
   width: $animal-size;
@@ -118,9 +103,8 @@ html, body, .app {
   }
 }
 
-.slide-in {
-  animation: 1s slide-in ease-out;
-}
+
+/* barn */
 
 .barn {
   display: flex;
@@ -133,21 +117,29 @@ html, body, .app {
   background-size: contain;
   background-position: 50% bottom;
   background-repeat: no-repeat;
-  transition: transform 0.2s ease-out;
+
+  &.der {
+    background-image: url('../images/barn/green-barn.png');
+  }
+
+  &.die {
+    background-image: url('../images/barn/yellow-barn.png');
+  }
+
+  &.das {
+    background-image: url('../images/barn/blue-barn.png');
+  }
+
 
   perspective: 10em;
   perspective-origin: 50% 75%;
 
-  &.over {
 
-  }
 }
 
 .barn-door {
   width: 20%;
-  height: 50%;
-  max-height: 80px;
-  max-width: 70px;
+  height: 40%;
 
   background-size: 100% 100%;
   background-repeat: no-repeat;
@@ -161,11 +153,6 @@ html, body, .app {
   &.right {
     background-position: right bottom;
     transform-origin: right top;
-  }
-
-
-  :after {
-
   }
 }
 
@@ -181,17 +168,19 @@ html, body, .app {
 }
 
 .der .barn-door {
-  background-image: url('../images/barn/door_der.png');
+  background-image: url('../images/barn/green-door.png');
 }
 
 .die .barn-door {
-  background-image: url('../images/barn/door_die.png');
+  background-image: url('../images/barn/yellow-door.png');
 }
 
 .das .barn-door {
-  background-image: url('../images/barn/door_das.png');
+  background-image: url('../images/barn/blue-door.png');
 }
 
+
+/* progress bar */
 
 .progress-bar {
   background: #fff;
@@ -206,6 +195,8 @@ html, body, .app {
   transition: width 0.2s linear;
 }
 
+
+/* farm game screen */
 
 .farm-game {
   display: flex;
@@ -230,5 +221,16 @@ html, body, .app {
     align-self: center;
     height: 50%;
     max-height: $animal-size;
+    z-index: 999;
   }
+
+  .progress-bar {
+    margin: 10px;
+  }
+}
+
+/* utils */
+
+.slide-in {
+  animation: 1s slide-in ease-out;
 }
