--- a/style/app.scss
+++ b/style/app.scss
@@ -65,6 +65,10 @@ html, body, .app {
 /* sign */
 
 .sign {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   width: 100%;
   height: 300px;
   text-align: center;
@@ -74,17 +78,34 @@ html, body, .app {
   background-size: contain;
   background-image: url('../images/sign.png');
 
-  h1 {
+  h1, h2 {
+    line-height: 100%;
+  }
 
+  h1 {
     color: #885533;
     margin: 0;
-    line-height: 1em;
+    font-size: 3em;
   }
 
   h2 {
-
-    line-height: 0.8em;
+    font-size: 2em;
     margin: 0;
+  }
+}
+
+@media screen and (max-height: 300px) {
+
+  .sign {
+
+    h1 {
+      font-size: 2em;
+    }
+
+    h2 {
+      font-size: 1.5em;
+      margin: 0;
+    }
   }
 }
 
@@ -153,6 +174,24 @@ html, body, .app {
   background-color: #ff645c;
   transition: width 0.2s linear;
 }
+
+
+/* home screen  */
+
+.home.screen {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+
+  .home-menu {
+    width: 100%;
+    flex-direction: row;
+  }
+}
+
 
 
 /* farm game screen */
