--- a/style/app.scss
+++ b/style/app.scss
@@ -131,7 +131,6 @@ html, body, .app {
 
     h2 {
       font-size: 1.5em;
-      margin: 0;
     }
   }
 }
@@ -148,6 +147,61 @@ html, body, .app {
 
   &.preview {
     filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.2))
+  }
+
+
+  /* types */
+
+  &.cat {
+    background-image: url('../images/animals/cat.png');
+  }
+
+  &.cow {
+    background-image: url('../images/animals/cow.png');
+  }
+
+  &.dog {
+    background-image: url('../images/animals/dog.png');
+  }
+
+  &.donkey {
+    background-image: url('../images/animals/donkey.png');
+  }
+
+  &.duck {
+    background-image: url('../images/animals/duck.png');
+  }
+
+  &.goat {
+    background-image: url('../images/animals/goat.png');
+  }
+
+  &.goose {
+    background-image: url('../images/animals/goose.png');
+  }
+
+  &.horse {
+    background-image: url('../images/animals/horse.png');
+  }
+
+  &.mouse {
+    background-image: url('../images/animals/mouse.png');
+  }
+
+  &.pig {
+    background-image: url('../images/animals/pig.png');
+  }
+
+  &.rabbit {
+    background-image: url('../images/animals/rabbit.png');
+  }
+
+  &.rooster {
+    background-image: url('../images/animals/rooster.png');
+  }
+
+  &.sheep {
+    background-image: url('../images/animals/sheep.png');
   }
 }
 
@@ -237,7 +291,6 @@ html, body, .app {
   justify-content: space-around;
   align-items: center;
 
-
   .home-menu {
     width: 100%;
     flex-direction: row;
@@ -246,7 +299,7 @@ html, body, .app {
 
 /* farm game screen */
 
-.farm-game {
+.farm-game.screen {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -288,6 +341,37 @@ html, body, .app {
     margin-bottom: 15px;
   }
 }
+
+
+/* info screen */
+
+.info.screen {
+  position: relative;
+  padding: 20px;
+
+
+  .animal-stats {
+    position: absolute;
+    top: 100px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+    overflow: auto;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .animal-stat {
+    margin: 10px;
+  }
+
+  .progress-bar {
+    height: 10px;
+  }
+}
+
 
 /* utils */
 
