--- a/style/app.scss
+++ b/style/app.scss
@@ -99,6 +99,24 @@ html, body, .app {
   align-items: center;
 }
 
+.field-set {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 250px;
+
+
+  label {
+    font-size: 1.5em;
+    margin-bottom: 5px
+  }
+
+  input, select {
+    border: 2px solid #000;
+    font-size: 1.5em;
+  }
+}
+
 /* sign */
 
 .sign {
@@ -334,18 +352,29 @@ html, body, .app {
   position: relative;
   padding: 10px;
 
+  .info-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    &> * {
+      margin: 0 5px;
+    }
+  }
+
   .animal-stats {
     position: absolute;
-    top: 70px;
+    top: 90px;
     left: 10px;
     right: 10px;
     bottom: 10px;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
-    overflow: auto;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     padding: 10px;
     display: flex;
     justify-content: space-around;
-
     flex-wrap: wrap;
   }
 
@@ -371,7 +400,6 @@ html, body, .app {
   align-items: center;
   justify-content: space-around;
 }
-
 
 /* utils */
 
