--- a/style/app.scss
+++ b/style/app.scss
@@ -102,6 +102,7 @@ html, body, .app {
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
 }
 
 .field-set {
