Change colors of the barns

--- a/style/app.scss
+++ b/style/app.scss
@@ -233,15 +233,15 @@ html, body, .app {
   margin: 5px;
 
   &.der {
-    background-image: url('../images/barn/green-barn.svg');
+    background-image: url('../images/barn/der-barn.svg');
   }
 
   &.die {
-    background-image: url('../images/barn/yellow-barn.svg');
+    background-image: url('../images/barn/die-barn.svg');
   }
 
   &.das {
-    background-image: url('../images/barn/blue-barn.svg');
+    background-image: url('../images/barn/das-barn.svg');
   }
 
   &.over {
